force-app/main/default/objects/Dealer_Contact__c/Dealer_Contact__c.object-meta.xml
<CustomObject>
    <label>Dealer Contact</label>
    <nameField>
        <label>Dealer Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dealer Contact</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>