force-app/main/default/objects/Dealer_Contact__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dealer Contact</relationshipLabel>
    <relationshipName>Dealer_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>