force-app/main/default/objects/Dealer_Contact__c/fields/Dealer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Contact__c</fullName>
    <label>Dealer Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>