force-app/main/default/objects/Dealer_Contact__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Dealer Contact</relationshipLabel>
    <relationshipName>Dealer_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>